# Corewar

./: 2corewar  5051.s  CMakeLists.txt  Makefile  README.md  a.out  author  file1  file2  log  test.cpp
asm/: Makefile  asm.h  ft_flag2.c
corewar/: Makefile
corewar/inc/: corewar.h
corewar/src/: bswp_errprint.c  ft_uitoa_base.c  inits.c  lil_func.c  live_ld_st_add_sub.c  main.c  run_processes.c  st.c  sti.c  sub_main.c  sub_main2.c  sub_main3.c  sub_main4.c  sub_main5.c
inc/: corewar.h  glob.h  visualization.h
libft/: get_next_line.c
libft/ft_printf/srcs/convert/: ft_itoa_base.c
libft/libft/: Makefile  ft_go_zero.c  ft_itoa_base.c  ft_printf.h  ft_uitoa_base.c  libft.h
src/: and_or_xor_zjmp_ldi.c  atoi_base.c  bswp_errprint.c  converts.c  init_pro.c  initfunc.c  inits.c  ldi.c  lil_func.c  live_ld_st_add_sub.c  lld.c  lldi.c  main.c  read.c  read2.c  readers.c  run_processes.c  st.c  sti.c  sti_fork_lld_lldi_lfork.c  sub_main.c  sub_main2.c  sub_main3.c  sub_main4.c  sub_main5.c  sub_main6.c  visMethods.c  visMethods2.c  vis_methods.c  vis_methods2.c  vizualize.c
vm_champs/: 50iter  50iter2
vm_champs/champs/: 423.cor
vm_champs/champs/examples/: helltrain.cor  helltrain.s
